--- a/assets/scss/components/grid.scss
+++ b/assets/scss/components/grid.scss
@@ -6,6 +6,19 @@ $breakpoint-small: 33.75em; // 540px
 $breakpoint-med: 45em; // 720px
 $breakpoint-large: 60em; // 960px
 
+@mixin breakpoint($point) {
+  @if $point == desktop {
+    @media (min-width: $breakpoint-large) { @content ; }
+  }
+  @else if $point == tablet {
+    @media (min-width: $breakpoint-med) { @content ; }
+  }
+  @else if $point == mobile {
+    @media (max-width: $breakpoint-small)  { @content ; }
+
+  }
+}
+
 .container {
   width: 90%;
   margin-left: auto;
