--- a/assets/scss/components/modal.scss
+++ b/assets/scss/components/modal.scss
@@ -12,6 +12,10 @@
   z-index: 9999;
   overflow-y: auto;
 
+  @include breakpoint(mobile) {
+    z-index: 100000;
+  }
+
   &__body {
     width: 100%;
     max-width: 30rem;
@@ -23,6 +27,12 @@
     &--wide {
       max-width: 50rem;
     }
+
+    @include breakpoint(mobile) {
+      min-height: 100vh;
+      margin: 0;
+      border-radius: 0;
+    }
   }
 
   &__header {
@@ -31,6 +41,18 @@
     font-weight: bold;
     line-height: 1.5;
     border-bottom: 1px solid #eee;
+
+    @include breakpoint(mobile) {
+      position: relative;
+
+      .modal--right {
+        position: absolute;
+        top: 0;
+        padding: 6px 1rem 0 1rem;
+        right: 0;
+        background-color: white;
+      }
+    }
 
     &-buttons {
       font-weight: normal;
@@ -68,6 +90,14 @@
       padding: 0;
       display: flex;
       align-items: center;
+
+      @include breakpoint(mobile) {
+        display: block;
+        &__message {
+          padding-right: 0;
+          padding-bottom: 10px;
+        }
+      }
 
       &__buttons {
         flex-shrink: 0;
